--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-router-flux": "^3.39.2",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
+    "redux-actions": "^2.0.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
